# tic-tac-toe

./: .gitignore  Game.py  README.md  play_game.py  pyproject.toml
tests/: test_game.py
